k3s/base/backend/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: backend-app
  namespace: backend
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - image: docker.io/ibnummuhammad/helloworld-java-spring
          env:
            - name: TARGET
              value: "Spring Boot Sample v1"
