k3s/base/backend/authorizationpolicies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allowlist-by-paths
  namespace: backend
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - /metrics
              - /healthz
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: backend
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals:
              ["testing@secure.istio.io/testing@secure.istio.io"]
